--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,6 @@
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
  */
 plugins {
-    id 'org.springframework.boot' version '2.3.1.RELEASE'
-    id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.72'
 }
@@ -16,9 +14,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation "com.fasterxml.jackson.core:jackson-databind:2.9.8"
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
 }
 compileKotlin {
     kotlinOptions {
