--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@
  * Learn how to create Gradle builds at https://guides.gradle.org/creating-new-gradle-builds
  */
 plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    id 'org.jetbrains.kotlin.jvm' version '1.9.23'  // Kotlin 插件
+    id 'java'                                // 应用程序插件
 }
 
 repositories {
@@ -14,16 +14,11 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.4.2'
 }
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17) // 指定 JDK 17
     }
 }
